# Ask_me

./: .gitignore  README.md  pyproject.toml
vca/: __init__.py  analyzer.py  cli.py  evaluator.py  generator.py  logger.py  opencode_client.py  storage.py  ui.py
vca/tui/: __init__.py  app.py
vca/tui/screens/: __init__.py  feedback.py  help.py  main.py  summary.py
vca/tui/styles/: app.tcss
vca/tui/widgets/: __init__.py  answer_input.py  question_view.py
