[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vca"
version = "0.1.0"
description = "AI-powered learning companion for code changes"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "GitPython>=3.1.0",
    "textual>=0.60.0",
]

[project.scripts]
vca = "vca.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]
